# ChangeLog for dev-java/itext
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/itext/ChangeLog,v 1.8 2005/08/02 21:13:50 betelgeuse Exp $

  02 Aug 2005; Petteri Räty <betelgeuse@gentoo.org> itext-1.3.ebuild:
  Added source use flag support for bug 98042.

  16 Jul 2005; Thomas Matthijs <axxo@gentoo.org> -itext-1.1.4.ebuild,
  itext-1.2.3.ebuild, itext-1.3.ebuild:
  remove older, keyword x86

  01 Jul 2005; David Holm <dholm@gentoo.org> itext-1.3.ebuild:
  Added to ~ppc.

  20 May 2005; Jan Brinkmann <luckyduck@gentoo.org> itext-1.2.3.ebuild:
  introduced support for the source useflag, stable on amd64

*itext-1.3 (29 Apr 2005)

  29 Apr 2005; <mglauche@gentoo.org> -itext-1.2.1.ebuild, itext-1.2.3.ebuild,
  +itext-1.3.ebuild:
  Version bump, removed 1.2.1, marked 1.2.4 stable on x86, marked 1.2.4 unstable
  on amd64

*itext-1.2.3 (04 Mar 2005)

  04 Mar 2005; <mglauche@gentoo.org> +itext-1.2.3.ebuild:
  Version bump

*itext-1.2.1 (17 Jan 2005)

  17 Jan 2005; <mglauche@gentoo.org> itext-1.1.4.ebuild, -itext-1.1.ebuild,
  +itext-1.2.1.ebuild:
  Version bump: 1.2.1 (latest stable from website), remove old version

*itext-1.1 (05 Jan 2005)

  05 Jan 2005; <mglauche@gentoo.org> +Changelog, +metadata.xml,
  +itext-1.1.4.ebuild, +itext-1.1.ebuild:
  new location: dev-java/itext
  version bumps

*itext-1.02b-r1 (14 Nov 2004)

  14 Nov 2004; Thomas Matthijs <axxo@gentoo.org> +itext-1.02b-r1.ebuild:
  don't download anything during install, #63232, patch submitted by Hendrik
  Sticher <hendrik_sticher@gmx.de>

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> itext-1.02b.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

  23 Aug 2004; Chris Aniszczyk <zx@gentoo.org> itext-1.02b.ebuild:
  Marking stable on x86

  17 Feb 2004; Chris Aniszczyk <zx@gentoo.org> itext-1.02b.ebuild:
  Ooops... fixes :)

*itext-1.02b (17 Feb 2004)
