@@ -1,6 +1,18 @@
-MD5 051be785d2245bb44b5a0b245f5d2e89 ChangeLog 2071
-MD5 3f96ee8e03288b7fba731e677f47c335 itext-1.2.3.ebuild 1247
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 MD5 1a56dd3a17d4a12142ede843e3ab68af itext-1.3.ebuild 1258
+MD5 3f96ee8e03288b7fba731e677f47c335 itext-1.2.3.ebuild 1247
+MD5 44d3fc0dbf337a63ae78a7714ce8e526 itext-1.3.5.ebuild 1257
+MD5 6d95a9d3bbe0dfcca29f7f59fc0d0727 ChangeLog 2181
 MD5 f4bcbe202d039f3aeef294666a30e5fb metadata.xml 366
-MD5 c90c9fb4765b01afdd1fb33582805da1 files/digest-itext-1.2.3 178
 MD5 9efb9a777cb4b6f8d0125f5140432bdf files/digest-itext-1.3 176
+MD5 c90c9fb4765b01afdd1fb33582805da1 files/digest-itext-1.2.3 178
+MD5 27477ba8223621ca9b89324021c176f7 files/digest-itext-1.3.5 179
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.1 (GNU/Linux)
+
+iD8DBQFDg9ZOndWRXhKOboURAhaoAKDJsD5nFYpPKT6hQVXlRWwDdRKbogCgg5Y6
+RmFguIqnPT0IXBDpM3hdILU=
+=nMAA
+-----END PGP SIGNATURE-----
