@@ -1,0 +1,3 @@
+MD5 12e6069bd2d6ec375bd053f35d278fe8 build.xml 39589
+MD5 12ae5581fbb38d88fe64601a25024a60 itext-src-1.3.5.tar.gz 1025101
+MD5 18732eee813d844c3fd2e052ac08cde9 iTextHYPH.jar 347986
