@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/itext
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/itext/ChangeLog,v 1.8 2005/08/02 21:13:50 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/itext/ChangeLog,v 1.9 2005/11/23 02:38:13 nichoj Exp $
+
+*itext-1.3.5 (23 Nov 2005)
+
+  23 Nov 2005; <nichoj@gentoo.org> +itext-1.3.5.ebuild:
+  Version bump (bug #112062)
 
   02 Aug 2005; Petteri Räty <betelgeuse@gentoo.org> itext-1.3.ebuild:
   Added source use flag support for bug 98042.
